# jarvis-device

./: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
bom/: bom.csv
docs/: ASSEMBLY.md  FLASHING.md  TROUBLESHOOTING.md
firmware/: CMakeLists.txt  README.md  partitions.csv  platformio.ini
firmware/include/: config.h  states.h
firmware/src/: audio.cpp  http_stream.cpp  led.cpp  main.cpp  mqtt.cpp  wifi.cpp
hardware/case/: jarvis-case.scad
